--- a/gst-plugins-base/gst-libs/gst/audio/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/audio/Makefile.am
@@ -1,11 +1,11 @@
-librarydir = $(libdir)/gst
+librarydir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 library_LTLIBRARIES = libgstaudio.la
 
 libgstaudio_la_SOURCES = audio.c
 
-libgstaudioincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/audio
-libgstaudioinclude_HEADERS = audio.h
+# libgstaudioincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/audio
+noinst_HEADERS = audio.h
 
 libgstaudio_la_LIBADD =
 libgstaudio_la_CFLAGS = $(GST_CFLAGS) -finline-functions -ffast-math
