--- a/gst-plugins-base/gst-libs/gst/riff/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/riff/Makefile.am
@@ -1,11 +1,12 @@
-librarydir = $(prefix)/lib/gst
+librarydir = $(prefix)/lib/gstreamer-@GST_MAJORMINOR@
 
 library_LTLIBRARIES = libgstriff.la
 
 libgstriff_la_SOURCES = riffparse.c riffencode.c riffutil.c riff.c
 
-libgstriffincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/riff
-libgstriffinclude_HEADERS = riff.h
+## libgstriffincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/riff
+## libgstriffinclude_HEADERS = riff.h
+noinst_HEADERS = riff.h
 
 libgstriff_la_LIBADD =
 libgstriff_la_CFLAGS = $(GST_CFLAGS) -funroll-all-loops -finline-functions -ffast-math
