--- a/gst-plugins-base/gst-libs/gst/video/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/video/Makefile.am
@@ -1,11 +1,12 @@
-librarydir = $(libdir)/gst
+librarydir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 library_LTLIBRARIES = libgstvideo.la
 
 libgstvideo_la_SOURCES = video.c
 
-libgstvideoincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/video
-libgstvideoinclude_HEADERS = video.h
+#libgstvideoincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/video
+#libgstvideoinclude_HEADERS = video.h
+noinst_HEADERS = video.h
 
 libgstvideo_la_LIBADD =
 libgstvideo_la_CFLAGS = $(GST_CFLAGS) -finline-functions -ffast-math
