--- a/gst-plugins-base/gst-libs/gst/idct/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/idct/Makefile.am
@@ -4,7 +4,7 @@ else
 GSTIDCTARCH_SRCS =
 endif
 
-librarydir = $(libdir)/gst
+librarydir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 library_LTLIBRARIES = libgstidct.la
 
@@ -15,8 +15,9 @@ libgstidct_la_SOURCES = \
 	intidct.c \
 	$(GSTIDCTARCH_SRCS)
 
-libgstidctincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/idct
-libgstidctinclude_HEADERS = idct.h
+## libgstidctincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/idct
+## libgstidctinclude_HEADERS = idct.h
+noinst_HEADERS = idct.h dct.h
 
 ## check_PROGRAMS = ieeetest
 
@@ -25,7 +26,6 @@ libgstidctinclude_HEADERS = idct.h
 ## ieeetest_CFLAGS = $(GST_CFLAGS)
 ## ieeetest_LDFLAGS = $(GST_LIBS)
 
-noinst_HEADERS = dct.h
 
 libgstidct_la_LIBADD =
 libgstidct_la_CFLAGS = $(GST_CFLAGS) -finline-functions -ffast-math
