--- a/gst-plugins-base/gst/volume/Makefile.am
+++ b/gst-plugins-base/gst/volume/Makefile.am
@@ -1,10 +1,10 @@
-plugindir = $(libdir)/gst
+plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstvolume.la
 
 libgstvolume_la_SOURCES = gstvolume.c
 libgstvolume_la_CFLAGS = $(GST_CFLAGS)
-libgstvolume_la_LIBADD = $(GST_LIBS) -lgstcontrol
+libgstvolume_la_LIBADD = $(GST_LIBS) $(GST_CONTROL_LIBS)
 libgstvolume_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstvolume.h filter.func
