--- a/gst-plugins-good/gstreamer-libs.pc.in
+++ b/gst-plugins-good/gstreamer-libs.pc.in
@@ -1,11 +1,11 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/@PACKAGE@-@VERSION@
+includedir=@includedir@/gstreamer-@GST_MAJORMINOR@
 
 Name: GStreamer Media-Specific Libraries
 Description: Streaming-media framework, media-specific libraries
-Requires: gstreamer = @VERSION@
+Requires: gstreamer-@GST_MAJORMINOR@ = @VERSION@
 Version: @VERSION@
 Libs: 
 Cflags: -I${includedir}
