parallel install fixes
Original commit message from CVS:
parallel install fixes

--- a/gst-plugins-bad/gst/modplug/Makefile.am
+++ b/gst-plugins-bad/gst/modplug/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS=libmodplug .
 
-plugindir = $(libdir)/gst
+plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstmodplug.la
 
