--- a/gst-plugins-bad/ext/ladspa/Makefile.am
+++ b/gst-plugins-bad/ext/ladspa/Makefile.am
@@ -1,10 +1,10 @@
-plugindir = $(libdir)/gst
+plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstladspa.la
 
 libgstladspa_la_SOURCES = gstladspa.c search.c load.c
 libgstladspa_la_CFLAGS = $(GST_CFLAGS)
-libgstladspa_la_LIBADD = $(GST_LIBS) -lgstcontrol
+libgstladspa_la_LIBADD = $(GST_LIBS) $(GST_CONTROL_LIBS)
 libgstladspa_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstladspa.h utils.h
