--- a/gst-plugins-bad/gst-libs/gst/gconf/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/gconf/Makefile.am
@@ -1,17 +1,17 @@
 librarydir = $(libdir)
 
-library_LTLIBRARIES = libgstgconf.la
+library_LTLIBRARIES = libgstgconf-@GST_MAJORMINOR@.la
 
-libgstgconf_la_SOURCES = gconf.c
+libgstgconf_@GST_MAJORMINOR@_la_SOURCES = gconf.c
 
-libgstgconfincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/gconf
-libgstgconfinclude_HEADERS = gconf.h
+libgstgconf_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/gconf
+libgstgconf_@GST_MAJORMINOR@include_HEADERS = gconf.h
 
 noinst_PROGRAMS = test-gconf
 
 test_gconf_CFLAGS = $(GST_CFLAGS) $(GCONF_CFLAGS)
-test_gconf_LDADD = $(GST_LIBS) $(GCONF_LIBS) libgstgconf.la
+test_gconf_LDADD = $(GST_LIBS) $(GCONF_LIBS) libgstgconf-@GST_MAJORMINOR@.la
 
-libgstgconf_la_LIBADD = $(GCONF_LIBS)
-libgstgconf_la_CFLAGS = $(GST_CFLAGS) $(GCONF_CFLAGS)
-libgstgconf_la_LDFLAGS = @GST_PLUGINS_LT_LDFLAGS@ -version-info @GST_PLUGINS_LIBVERSION@
+libgstgconf_@GST_MAJORMINOR@_la_LIBADD = $(GCONF_LIBS)
+libgstgconf_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS) $(GCONF_CFLAGS)
+libgstgconf_@GST_MAJORMINOR@_la_LDFLAGS = @GST_PLUGINS_LT_LDFLAGS@ -version-info @GST_PLUGINS_LIBVERSION@
