--- a/gst-plugins-bad/gst-libs/gst/play/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/play/Makefile.am
@@ -1,13 +1,14 @@
 librarydir = $(libdir)
 
-library_LTLIBRARIES = libgstplay.la
+library_LTLIBRARIES = libgstplay-@GST_MAJORMINOR@.la
 
-libgstplay_la_SOURCES = play.c
+libgstplay_@GST_MAJORMINOR@_la_SOURCES = play.c
 
-libgstplayincludedir = $(includedir)/@PACKAGE@-@VERSION@/gst/play
-libgstplayinclude_HEADERS = play.h
+libgstplay_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/play
+libgstplay_@GST_MAJORMINOR@include_HEADERS = play.h
 
-libgstplay_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_CFLAGS)
-libgstplay_la_LIBADD = $(GST_LIBS) $(GST_PLUGINS_LIBS)
+libgstplay_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_CFLAGS)
+libgstplay_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) $(GST_PLUGINS_LIBS)
+libgstplay_@GST_MAJORMINOR@_la_LDFLAGS = -version-info @GST_PLUGINS_LIBVERSION@
 
 noinst_HEADERS = playpipelines.c
