--- a/gst-plugins-bad/gstreamer-play.pc.in
+++ b/gst-plugins-bad/gstreamer-play.pc.in
@@ -1,12 +1,12 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/@PACKAGE@-@VERSION@
+includedir=@includedir@/gstreamer-@GST_MAJORMINOR@
 
 Name: GStreamer Play Library
 Description: Streaming-media framework, play libraries
-Requires: gstreamer >= @VERSION@
+Requires: gstreamer-@GST_MAJORMINOR@ >= @VERSION@
 Version: @VERSION@
 
-Libs: -L${libdir} -lgstplay -lgstcontrol
+Libs: -L${libdir} -lgstplay-@GST_MAJORMINOR@ -lgstcontrol-@GST_MAJORMINOR@
 Cflags: -I${includedir}
