--- a/gstreamer/Makefile.am
+++ b/gstreamer/Makefile.am
@@ -27,12 +27,15 @@ DIST_SUBDIRS = include libs gst tools tests testsuite examples docs
 
 gstreamer-@GST_MAJORMINOR@.pc: gstreamer.pc
 	cp gstreamer.pc gstreamer-@GST_MAJORMINOR@.pc
+gstreamer-uninstalled-@GST_MAJORMINOR@.pc: gstreamer.pc
+	cp gstreamer-uninstalled.pc gstreamer-@GST_MAJORMINOR@-uninstalled.pc
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gstreamer-@GST_MAJORMINOR@.pc
 
 EXTRA_DIST = gstreamer.spec.in \
-	     gstreamer.pc.in gstreamer-uninstalled.pc.in \
+	     gstreamer-@GST_MAJORMINOR@.pc.in \
+	     gstreamer-@GST_MAJORMINOR@-uninstalled.pc.in \
 	     configure.ac autogen.sh depcomp \
 	     REQUIREMENTS ABOUT-NLS RELEASE DOCBUILDING DEVEL \
 	     idiottest.mak common
