--- a/gstreamer/gstreamer-uninstalled.pc.in
+++ b/gstreamer/gstreamer-uninstalled.pc.in
@@ -4,10 +4,11 @@ exec_prefix=
 libdir=${pcfiledir}
 includedir=${pcfiledir}
 toolsdir=${pcfiledir}/tools
+gstcontrol_libs=-lgstcontrol-@GST_MAJORMINOR@
 
 Name: GStreamer Uninstalled
 Description: Streaming-media framework, Not Installed
 Version: @VERSION@
 Requires: @GST_PKG_DEPS@@LIBXML_PKG@
-Libs: ${libdir}/gst/libgstreamer.la -L${libdir}/libs/gst/control/
+Libs: ${libdir}/gst/libgstreamer-@GST_MAJORMINOR@.la -L${libdir}/libs/gst/control/
 Cflags: -I${includedir} -I${includedir}/libs -I${pc_top_builddir}/${pcfiledir}/@srcdir@ -I${pc_top_builddir}/${pcfiledir}/@srcdir@/libs @GST_PKG_CFLAGS@
