--- a/gst-plugins-base/.gitignore
+++ b/gst-plugins-base/.gitignore
@@ -6,10 +6,10 @@ config.log
 config.status
 configure
 gst-plugins.spec
-gstreamer-libs-uninstalled.pc
-gstreamer-libs.pc
-gstreamer-play-uninstalled.pc
-gstreamer-play.pc
+gstreamer-libs-uninstalled*.pc
+gstreamer-libs*.pc
+gstreamer-play-uninstalled*.pc
+gstreamer-play*.pc
 libtool
 stamp-h
 stamp-h.in
