fix nonvalidation, now for the png problems !
Original commit message from CVS:
fix nonvalidation, now for the png problems !

--- a/gstreamer/docs/manual/Makefile.am
+++ b/gstreamer/docs/manual/Makefile.am
@@ -16,3 +16,7 @@ CSS=base.css
 EXTRA_DIST = $(XML) $(FIGS) $(CSS) magic-png magic-pdf
 
 include $(srcdir)/../manuals.mak
+
+check:
+	xmllint -noout -valid $(MAIN)
+
