--- a/gst-plugins-bad/gst/modplug/Makefile.am
+++ b/gst-plugins-bad/gst/modplug/Makefile.am
@@ -8,7 +8,8 @@ libgstmodplug_la_SOURCES = modplug_types.c gstmodplug.cc
 libgstmodplug_la_CFLAGS = $(GST_CFLAGS)
 libgstmodplug_la_CXXFLAGS = $(GST_CFLAGS)
 libgstmodplug_la_LIBADD = $(top_builddir)/gst/modplug/libmodplug/libmodplug.la
-libgstmodplug_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+# we add stdc++ because it'll be used by C programs
+libgstmodplug_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) -lstdc++
 
 noinst_HEADERS = gstmodplug.h modplug_types.h
 
