--- a/gstreamer/docs/gst/gstreamer.types.in
+++ b/gstreamer/docs/gst/gstreamer.types.in
@@ -17,5 +17,6 @@ gst_type_factory_get_type
 gst_element_factory_get_type
 gst_scheduler_factory_get_type
 gst_scheduler_get_type
-gst_cache_get_type
+gst_index_get_type
+gst_index_factory_get_type
 gst_xml_get_type
