- First pass at cleaning up the atomic mess
Original commit message from CVS:
- First pass at cleaning up the atomic mess
- moved weird asm to datastructure that makes sense
- this should also make the trasition to libatomic less painful

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -135,6 +135,7 @@ gst_headers =			\
 	gstsystemclock.h	\
 	gstthread.h		\
 	gsttrace.h		\
+	gsttrashstack.h		\
 	gsttype.h		\
 	gsttypefind.h		\
 	gstutils.h		\
