- major API breakage (one of the last, I promise...)
Original commit message from CVS:
- major API breakage (one of the last, I promise...)
- GST_PAD_QUERY -> GST_QUERY
- GstPadQuery -> GstQuery
- Move query definitions to gstquery.h to allow for future dynamic
query types.
- remove _pad_handles_* in favour of extra format/event functions to
make the same checks.
- fix elements
- Implemented missing query/event/formats functions in gstelement

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -131,6 +131,7 @@ gst_headers =			\
 	gstprobe.h		\
 	gstprops.h		\
 	gstqueue.h		\
+	gstquery.h		\
 	gstscheduler.h		\
 	gstsystemclock.h	\
 	gstthread.h		\
