- copy kernel headers (waiting for libatomic..)
Original commit message from CVS:
- copy kernel headers (waiting for libatomic..)
- Make sure the atomic stuff is never seen by the app
- inline atomic stuff for core only, expose non-inlined version to apps.

hoping this one works... please test

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -52,6 +52,7 @@ libgstreamer_@GST_MAJORMINOR@_la_SOURCES =		\
 	gstenumtypes.c		\
 	gstobject.c		\
 	$(GST_AUTOPLUG_SRC)	\
+	gstatomic.c		\
 	gstbin.c		\
 	gstbuffer.c		\
 	gstbufferpool-default.c	\
@@ -153,6 +154,7 @@ libgstreamer_@GST_MAJORMINOR@include_HEADERS = $(gst_headers) $(built_headers)
 
 noinst_HEADERS = 		\
 	gst_private.h		\
+	gstatomic_impl.h	\
 	gstdata_private.h	\
 	gstarch.h		\
 	cothreads.h		
